setting up gulp/ livreload

--- a/sass/omega4.styles.scss
+++ b/sass/omega4.styles.scss
@@ -1,8 +1,8 @@
 // Import external libraries.
-@import "compass";
-@import "breakpoint";
-@import "singularitygs";
-@import "toolkit-no-css";
+// @import "compass";
+// @import "breakpoint";
+// @import "singularitygs";
+// @import "toolkit-no-css";
 
 // Import variables, abstractions, base styles and components using globbing.
 //
@@ -16,7 +16,11 @@
 // directly. Variables-, function- or mixin providing partials should never
 // output any styles themselves: Importing them multiple times to resolve
 // dependencies shouldn't be a problem.
-@import "variables/**/*";
-@import "abstractions/**/*";
-@import "base/**/*";
-@import "components/**/*";
+@import "variables";
+// @import "abstractions/**/*";
+@import "base";
+@import "components";
+
+body {
+	
+}
